force-app/main/default/objects/ProductReceived__c/ProductReceived__c.object-meta.xml
<CustomObject>
    <label>Produto Recebido</label>
    <nameField>
        <label>Produto Recebido Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Produtos Recebidos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>