force-app/main/default/objects/ProductReceived__c/fields/DeliveredQuantity__c.field-meta.xml
<CustomField>
    <fullName>DeliveredQuantity__c</fullName>
    <label>Quantidade Entregue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>