force-app/main/default/objects/ProductReceived__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <label>Forma de Pagamento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>