force-app/main/default/objects/ProductReceived__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produtos Recebidos</relationshipLabel>
    <relationshipName>Produtos_Recebidos</relationshipName>
    <type>Lookup</type>
</CustomField>