force-app/main/default/objects/ProductReceived__c/fields/ProductOffered__c.field-meta.xml
<CustomField>
    <fullName>ProductOffered__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto Ofertado</label>
    <referenceTo>ProductOffered__c</referenceTo>
    <relationshipLabel>Produtos Recebidos</relationshipLabel>
    <relationshipName>Produtos_Recebidos</relationshipName>
    <type>Lookup</type>
</CustomField>