force-app/main/default/objects/ProductReceived__c/fields/Quantidade_Ofertada__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Ofertada__c</fullName>
    <label>Quantidade Ofertada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>