force-app/main/default/objects/ProductReceived__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Safra__c</columns>
    <columns>ContractItem__c</columns>
    <columns>PaymentType__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>